--- a/doc/autodoc/CMakeLists.txt
+++ b/doc/autodoc/CMakeLists.txt
@@ -10,7 +10,7 @@ ENDIF ( NOT DOT )
 
 SET( SNAPDOC_PACKAGE        libsnap )
 SET( SNAPDOC_VERSION        ${LIBSNAP_VERSION} )
-SET( SNAPDOC_SOURCE_DIR     ${CMAKE_SOURCE_DIR}/snapp )
+SET( SNAPDOC_SOURCE_DIR     ${CMAKE_SOURCE_DIR}/snap )
 SET( SNAPDOC_DOCINCLUDE_DIR ${CMAKE_SOURCE_DIR}/doc/autoinclude )
 SET( SNAPDOC_EXAMPLE_DIR    ${CMAKE_SOURCE_DIR}/examples )
 
