--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -1,14 +1,12 @@
-ADD_SUBDIRECTORY( autodoc EXCLUDE_FROM_ALL)
+ADD_SUBDIRECTORY(autodoc EXCLUDE_FROM_ALL)
 
-# TODO: use it
-MACRO(SNAPPERMANFILE)
-  MESSAGE(STATUS "Writing snapper.1 file...")
-  CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/snapper.1.cmake ${CMAKE_CURRENT_BINARY_DIR}/snapper.1 @ONLY)
-  INSTALL( FILES ${CMAKE_CURRENT_BINARY_DIR}/snapper.1 DESTINATION ${MANDIR}/man1 )
-ENDMACRO(SNAPPERMANFILE)
-
-INSTALL(
-  FILES ${CMAKE_CURRENT_SOURCE_DIR}/snapper.1
-  DESTINATION ${MANDIR}/man1
+CONFIGURE_FILE(
+   ${CMAKE_CURRENT_SOURCE_DIR}/snapper.1.cmake
+   ${CMAKE_CURRENT_BINARY_DIR}/snapper.1
+   @ONLY
 )
 
+INSTALL(
+  FILES ${CMAKE_CURRENT_BINARY_DIR}/snapper.1
+  DESTINATION ${MANDIR}/man1
+)
