- first steps handling snapshot info files

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
-BUILD
+Makefile.in
+Makefile
+.deps
+.libs
+aclocal.m4
+autom4te.cache
+config.*
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+missing
+stamp-h1
