--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -1,8 +1,10 @@
 #
-# Makefile.am for libsnapper/snapper
+# Makefile.am for snapper/snapper
 #
 
 lib_LTLIBRARIES = libsnapper.la
+
+AM_CXXFLAGS = -D_FILE_OFFSET_BITS=64
 
 libsnapper_la_SOURCES =					\
 	SnapperInterface.h				\
@@ -10,6 +12,7 @@ libsnapper_la_SOURCES =					\
 	XmlFile.cc		XmlFile.h		\
 	Enum.cc			Enum.h			\
 	AppUtil.cc		AppUtil.h		\
+	Files.cc		Files.h			\
 	SnapperTmpl.h
 
 libsnapper_la_LDFLAGS = -version-info 2:0
