--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -8,11 +8,13 @@ AM_CXXFLAGS = -D_FILE_OFFSET_BITS=64
 
 libsnapper_la_SOURCES =					\
 	SnapperInterface.h				\
+	Snapshot.cc		Snapshot.h		\
+	File.cc			File.h			\
 	Snapper.cc		Snapper.h		\
 	XmlFile.cc		XmlFile.h		\
 	Enum.cc			Enum.h			\
 	AppUtil.cc		AppUtil.h		\
-	Files.cc		Files.h			\
+	Compare.cc		Compare.h		\
 	SystemCmd.cc		SystemCmd.h		\
 	SnapperTmpl.h		SnapperDefines.h
 
