- added factory for snapper

--- a/snapper/Makefile.am
+++ b/snapper/Makefile.am
@@ -8,6 +8,7 @@ AM_CXXFLAGS = -D_FILE_OFFSET_BITS=64
 
 libsnapper_la_SOURCES =					\
 	Snapper.cc		Snapper.h		\
+	Factory.cc		Factory.h		\
 	Snapshot.cc		Snapshot.h		\
 	File.cc			File.h			\
 	XmlFile.cc		XmlFile.h		\
@@ -15,7 +16,8 @@ libsnapper_la_SOURCES =					\
 	AppUtil.cc		AppUtil.h		\
 	Compare.cc		Compare.h		\
 	SystemCmd.cc		SystemCmd.h		\
-	SnapperTmpl.h		SnapperDefines.h
+	SnapperTmpl.h					\
+	SnapperDefines.h
 
 libsnapper_la_LDFLAGS = -version-info 2:0
 libsnapper_la_LIBADD = -lblocxx -lxml2
@@ -24,6 +26,7 @@ pkgincludedir = $(includedir)/snapper
 
 pkginclude_HEADERS =					\
 	Snapper.h					\
+	Factory.h					\
 	Snapshot.h					\
 	File.h
 
