- use Table class from zypper for snapshot listing

--- a/configure.in
+++ b/configure.in
@@ -33,6 +33,7 @@ AC_OUTPUT(
 	snapper/Makefile
 	examples/Makefile
 	tools/Makefile
+	tools/utils/Makefile
 	data/Makefile
 	package/snapper.spec:snapper.spec.in
 )
