--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -2,9 +2,10 @@
 # Makefile.am for snapper/tools
 #
 
+SUBDIRS = utils
+
 INCLUDES = -I$(top_srcdir)
 
-LDADD = ../snapper/libsnapper.la
 
 toolsbindir = /usr/lib/snapper/bin
 
@@ -12,6 +13,12 @@ toolsbin_PROGRAMS = compare-dirs
 
 compare_dirs_SOURCES = compare-dirs.cc
 
+compare_LDADD = ../snapper/libsnapper.la
+
+
 bin_PROGRAMS = snapper
 
 snapper_SOURCES = snapper.cc
+
+snapper_LDADD = ../snapper/libsnapper.la utils/libutils.la 
+
