--- a/tools/Makefile.am
+++ b/tools/Makefile.am
@@ -13,12 +13,12 @@ toolsbin_PROGRAMS = compare-dirs
 
 compare_dirs_SOURCES = compare-dirs.cc
 
-compare_LDADD = ../snapper/libsnapper.la
+compare_dirs_LDADD = ../snapper/libsnapper.la
 
 
 bin_PROGRAMS = snapper
 
 snapper_SOURCES = snapper.cc
 
-snapper_LDADD = ../snapper/libsnapper.la utils/libutils.la 
+snapper_LDADD = ../snapper/libsnapper.la utils/libutils.la
 
