--- a/tools/utils/Makefile.am
+++ b/tools/utils/Makefile.am
@@ -9,5 +9,6 @@ noinst_LTLIBRARIES = libutils.la
 libutils_la_SOURCES =			\
 	Table.cc	Table.h		\
 	text.cc		text.h		\
-	console.cc	console.h
+	console.cc	console.h	\
+	GetOpts.cc	GetOpts.h
 
