- nicer check_equal macro

--- a/testsuite-real/Makefile.am
+++ b/testsuite-real/Makefile.am
@@ -2,6 +2,8 @@
 # Makefile.am for snapper/testsuite-real
 #
 
+CXXFLAGS += -std=gnu++0x
+
 INCLUDES = -I$(top_srcdir)
 
 LDADD = ../snapper/libsnapper.la
