--- a/configure.in
+++ b/configure.in
@@ -34,6 +34,7 @@ AC_OUTPUT(
 	examples/Makefile
 	tools/Makefile
 	tools/utils/Makefile
+	scripts/Makefile
 	data/Makefile
 	testsuite-real/Makefile
 	package/snapper.spec:snapper.spec.in
