--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -49,6 +49,10 @@ rm -rf "$RPM_BUILD_ROOT"
 %files
 %defattr(-,root,root)
 %{prefix}/bin/snapper
+/etc/cron.hourly/snapper-hourly
+/etc/cron.daily/snapper-daily
+%{prefix}/lib/snapper/bin/hourly
+%{prefix}/lib/snapper/bin/daily
 
 %package -n libsnapper
 Summary:	Library for filesystem snapshot management
