- pack directory for configs

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -8,3 +8,6 @@ logrotate_DATA = snapper
 
 EXTRA_DIST = $(fillup_DATA) $(logrotate_DATA)
 
+install-data-local:
+	mkdir -p $(DESTDIR)/etc/sysconfig/snapper.d
+
