--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -70,6 +70,7 @@ Authors:
 %files -n libsnapper
 %defattr(-,root,root)
 %{_libdir}/libsnapper.so.*
+%dir %{_sysconfdir}/sysconfig/snapper.d
 %config(noreplace) %{_sysconfdir}/logrotate.d/snapper
 %doc %dir %{prefix}/share/doc/packages/snapper
 %doc %{prefix}/share/doc/packages/snapper/AUTHORS
