- example program to help timeline cleanup development

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -6,11 +6,13 @@ INCLUDES = -I$(top_srcdir)
 
 LDADD = ../snapper/libsnapper.la
 
-noinst_PROGRAMS = List Create CmpDirs
+noinst_PROGRAMS = List Create CmpDirs CreateTimeline
 
 List_SOURCES = List.cc
 
 Create_SOURCES = Create.cc
 
 CmpDirs_SOURCES = CmpDirs.cc
+
+CreateTimeline_SOURCES = CreateTimeline.cc
 
