- allow to ignore files during snapshot comparison

--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -72,6 +72,8 @@ Authors:
 %{_libdir}/libsnapper.so.*
 %dir %{_sysconfdir}/snapper
 %dir %{_sysconfdir}/snapper/configs
+%dir %{_sysconfdir}/snapper/filters
+%config(noreplace) %{_sysconfdir}/snapper/filters/base.txt
 %doc %dir %{prefix}/share/doc/packages/snapper
 %doc %{prefix}/share/doc/packages/snapper/AUTHORS
 %doc %{prefix}/share/doc/packages/snapper/COPYING
