--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -4,10 +4,12 @@
 
 fillup_DATA = sysconfig.snapper
 
-EXTRA_DIST = $(fillup_DATA) snapper.logrotate example-config
+EXTRA_DIST = $(fillup_DATA) base.txt snapper.logrotate example-config
 
 install-data-local:
 	install -D -m 644 snapper.logrotate $(DESTDIR)/etc/logrotate.d/snapper
 	install -d -m 755 $(DESTDIR)/etc/snapper/configs
+	install -d -m 755 $(DESTDIR)/etc/snapper/filters
+	install -D -m 644 base.txt $(DESTDIR)/etc/snapper/filters/base.txt
 	install -D -m 644 example-config $(DESTDIR)/usr/share/doc/packages/snapper/example-config
 
