--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -72,12 +72,13 @@ Authors:
 %{_libdir}/libsnapper.so.*
 %dir %{_sysconfdir}/snapper
 %dir %{_sysconfdir}/snapper/configs
+%dir %{_sysconfdir}/snapper/config-templates
+%config(noreplace) %{_sysconfdir}/snapper/config-templates/default
 %dir %{_sysconfdir}/snapper/filters
 %config(noreplace) %{_sysconfdir}/snapper/filters/*.txt
 %doc %dir %{prefix}/share/doc/packages/snapper
 %doc %{prefix}/share/doc/packages/snapper/AUTHORS
 %doc %{prefix}/share/doc/packages/snapper/COPYING
-%{prefix}/share/doc/packages/snapper/example-config
 /var/adm/fillup-templates/sysconfig.snapper
 %dir %{prefix}/lib/snapper
 %dir %{prefix}/lib/snapper/bin
