--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -4,7 +4,7 @@
 
 fillup_DATA = sysconfig.snapper
 
-EXTRA_DIST = $(fillup_DATA) base.txt x11.txt snapper.logrotate example-config
+EXTRA_DIST = $(fillup_DATA) base.txt x11.txt snapper.logrotate default-config
 
 install-data-local:
 	install -D -m 644 snapper.logrotate $(DESTDIR)/etc/logrotate.d/snapper
