--- a/configure.in
+++ b/configure.in
@@ -36,6 +36,7 @@ AC_OUTPUT(
 	tools/utils/Makefile
 	scripts/Makefile
 	data/Makefile
+	po/Makefile
 	testsuite-real/Makefile
 	package/snapper.spec:snapper.spec.in
 )
