- added callbacks for rollback errors

--- a/testsuite-real/Makefile.am
+++ b/testsuite-real/Makefile.am
@@ -10,7 +10,7 @@ LDADD = ../snapper/libsnapper.la
 
 noinst_SCRIPTS = run-all
 
-noinst_PROGRAMS = simple1 permissions1 permissions2 owner1 owner2
+noinst_PROGRAMS = simple1 permissions1 permissions2 owner1 owner2 error1
 
 simple1_SOURCES = simple1.cc common.h common.cc
 
@@ -19,6 +19,8 @@ permissions2_SOURCES = permissions2.cc common.h common.cc
 
 owner1_SOURCES = owner1.cc common.h common.cc
 owner2_SOURCES = owner2.cc common.h common.cc
+
+error1_SOURCES = error1.cc common.h common.cc
 
 EXTRA_DIST = $(noinst_SCRIPTS)
 
