--- a/snapper.spec.in
+++ b/snapper.spec.in
@@ -10,10 +10,9 @@ License:	GPL
 Group:		System/Packages
 BuildRoot:	%{_tmppath}/%{name}-%{version}-build
 Source:		snapper-%{version}.tar.bz2
-Source1:	snapper-rpmlintrc
 Prefix:		/usr
 BuildRequires:	gcc-c++ boost-devel blocxx-devel doxygen dejagnu libxml2-devel
-Requires:	libsnapper = %version
+Requires:	libsnapper0 = %version
 Recommends:	cron logrotate
 Summary:	Tool for filesystem snapshot management
 
@@ -56,20 +55,20 @@ rm -rf "$RPM_BUILD_ROOT"
 /etc/cron.hourly/suse.de-snapper
 /etc/cron.daily/suse.de-snapper
 
-%package -n libsnapper
+%package -n libsnapper0
 Summary:	Library for filesystem snapshot management
 Group:		System/Libraries
 Requires:	btrfsprogs diffutils util-linux
 PreReq:		%fillup_prereq
 
-%description -n libsnapper
+%description -n libsnapper0
 This package contains libsnapper, a library for filesystem snapshot management.
 
 Authors:
 --------
     Arvin Schnell <aschnell@suse.de>
 
-%files -n libsnapper
+%files -n libsnapper0
 %defattr(-,root,root)
 %{_libdir}/libsnapper.so.*
 %dir %{_sysconfdir}/snapper
@@ -86,15 +85,15 @@ Authors:
 %dir %{prefix}/lib/snapper/bin
 %{prefix}/lib/snapper/bin/compare-dirs
 
-%post -n libsnapper
+%post -n libsnapper0
 /sbin/ldconfig
 %{fillup_only -n snapper}
 
-%postun -n libsnapper
+%postun -n libsnapper0
 /sbin/ldconfig
 
 %package -n libsnapper-devel
-Requires:	libsnapper = %version
+Requires:	libsnapper0 = %version
 Requires:	gcc-c++ libstdc++-devel boost-devel blocxx-devel libxml2-devel
 Summary:	Header files and documentation for libsnapper
 Group:		Development/Languages/C and C++
