- only require libsnapper-devel since libsnapper<N> will change its name frequently
svn path=/trunk/snapper/; revision=63923

--- a/yast2-snapper.spec.in
+++ b/yast2-snapper.spec.in
@@ -1,9 +1,9 @@
 @HEADER-COMMENT@
 
 @HEADER@
-Requires:	yast2 libsnapper
+Requires:	yast2
 License: GPL v2 or later
-BuildRequires:	update-desktop-files yast2 yast2-devtools yast2-testsuite libsnapper libsnapper-devel doxygen yast2-core-devel gcc-c++ perl-XML-Writer
+BuildRequires:	update-desktop-files yast2 yast2-devtools yast2-testsuite libsnapper-devel doxygen yast2-core-devel gcc-c++ perl-XML-Writer
 
 Summary:	YaST - file system snapshots review
 
