--- a/configure.in
+++ b/configure.in
@@ -3,6 +3,16 @@ AC_INIT(snapper/Snapper.h)
 
 VERSION=`cat ./VERSION`
 
+LIBVERSION=`cat ./LIBVERSION`
+LIBVERSION_MAJOR=`cut -d . -f 1 ./LIBVERSION`
+LIBVERSION_MINOR=`cut -d . -f 2 ./LIBVERSION`
+LIBVERSION_PATCHLEVEL=`cut -d . -f 3 ./LIBVERSION`
+
+LIBVERSION_CURRENT=`expr $LIBVERSION_MAJOR + $LIBVERSION_MINOR`
+LIBVERSION_REVISON=`expr $LIBVERSION_PATCHLEVEL`
+LIBVERSION_AGE=`expr $LIBVERSION_MINOR`
+LIBVERSION_INFO=$LIBVERSION_CURRENT:$LIBVERSION_REVISON:$LIBVERSION_AGE
+
 AM_INIT_AUTOMAKE(snapper, $VERSION)
 AM_CONFIG_HEADER(config.h)
 
@@ -25,6 +35,8 @@ docdir=\${prefix}/share/doc/packages/snapper
 fillupdir=/var/adm/fillup-templates
 
 AC_SUBST(VERSION)
+AC_SUBST(LIBVERSION_MAJOR)
+AC_SUBST(LIBVERSION_INFO)
 AC_SUBST(docdir)
 AC_SUBST(fillupdir)
 
