--- a/testsuite-real/Makefile.am
+++ b/testsuite-real/Makefile.am
@@ -10,7 +10,8 @@ LDADD = ../snapper/libsnapper.la
 
 noinst_SCRIPTS = run-all
 
-noinst_PROGRAMS = simple1 permissions1 permissions2 owner1 owner2 error1
+noinst_PROGRAMS = simple1 permissions1 permissions2 owner1 owner2 error1 error2	\
+	error3
 
 simple1_SOURCES = simple1.cc common.h common.cc
 
@@ -21,6 +22,8 @@ owner1_SOURCES = owner1.cc common.h common.cc
 owner2_SOURCES = owner2.cc common.h common.cc
 
 error1_SOURCES = error1.cc common.h common.cc
+error2_SOURCES = error2.cc common.h common.cc
+error3_SOURCES = error3.cc common.h common.cc
 
 EXTRA_DIST = $(noinst_SCRIPTS)
 
