--- a/testsuite-real/Makefile.am
+++ b/testsuite-real/Makefile.am
@@ -10,8 +10,8 @@ LDADD = ../snapper/libsnapper.la
 
 noinst_SCRIPTS = run-all
 
-noinst_PROGRAMS = simple1 permissions1 permissions2 owner1 owner2 error1 error2	\
-	error3
+noinst_PROGRAMS = simple1 permissions1 permissions2 owner1 owner2	\
+	missing-directory1 error1 error2 error3 error4
 
 simple1_SOURCES = simple1.cc common.h common.cc
 
@@ -21,9 +21,12 @@ permissions2_SOURCES = permissions2.cc common.h common.cc
 owner1_SOURCES = owner1.cc common.h common.cc
 owner2_SOURCES = owner2.cc common.h common.cc
 
+missing_directory1_SOURCES = missing-directory1.cc common.h common.cc
+
 error1_SOURCES = error1.cc common.h common.cc
 error2_SOURCES = error2.cc common.h common.cc
 error3_SOURCES = error3.cc common.h common.cc
+error4_SOURCES = error4.cc common.h common.cc
 
 EXTRA_DIST = $(noinst_SCRIPTS)
 
