- rollback function restructored

--- a/testsuite-real/Makefile.am
+++ b/testsuite-real/Makefile.am
@@ -11,7 +11,7 @@ LDADD = ../snapper/libsnapper.la
 noinst_SCRIPTS = run-all
 
 noinst_PROGRAMS = simple1 permissions1 permissions2 owner1 owner2 owner3	\
-	missing-directory1 error1 error2 error3 error4
+	directory1 missing-directory1 error1 error2 error4
 
 simple1_SOURCES = simple1.cc common.h common.cc
 
@@ -22,11 +22,12 @@ owner1_SOURCES = owner1.cc common.h common.cc
 owner2_SOURCES = owner2.cc common.h common.cc
 owner3_SOURCES = owner3.cc common.h common.cc
 
+directory1_SOURCES = directory1.cc common.h common.cc
+
 missing_directory1_SOURCES = missing-directory1.cc common.h common.cc
 
 error1_SOURCES = error1.cc common.h common.cc
 error2_SOURCES = error2.cc common.h common.cc
-error3_SOURCES = error3.cc common.h common.cc
 error4_SOURCES = error4.cc common.h common.cc
 
 EXTRA_DIST = $(noinst_SCRIPTS)
