- started work on man-page

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 # Makefile.am for snapper
 #
 
-SUBDIRS = snapper examples tools scripts data po testsuite-real
+SUBDIRS = snapper examples tools scripts data doc po testsuite-real
 
 AUTOMAKE_OPTIONS = foreign dist-bzip2 no-dist-gzip
 
